--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,7 @@ next-env.d.ts
 /public/uploads/pictures/*
 /public/uploads/pedimentos/*
 /public/uploads/facturas/*
+/public/uploads/formatosAlta/*
+/public/uploads/formatosBaja/*
 !public/uploads/**/.gitkeep
 
